# Luis-Federico

./: CMakeLists.txt  README.md  esqueletor.c  main.c  main1.c  main2.c  rubick.glade
